# PyParsec

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  asv.conf.json  index.json  info.json  pyproject.toml  regressions.xml
.github/workflows/: bench.yml  ci.yml  publish.yml
PyParsec/: Char.py  Parsec.py  Prim.py
benchmarks/: after_fix.txt  before_fix.txt  bench_index_vs_slice.py  many_o2_issue.py
benchmarks/benchmarks/: bench_many.py
examples/: SimpleArithmeticSolver.py  json_example.json  json_parser.py  simple_arithmetic_solver.py
graphs/arch-x86_64/branch-master/cpu-AMD EPYC 7763 64-Core Processor/machine-runnervmymu0l/num_cpu-4/os-Linux 6.11.0-1018-azure/python-3.12/ram-16378824/: bench_many.TimeMany.time_many_small.json  summary.json
graphs/summary/: bench_many.TimeMany.time_many_large.json  bench_many.TimeMany.time_many_medium.json
pyarsec/: __init__.py
pyparsec/: Char.py  Combinators.py  Expr.py  Language.py  Parsec.py  Prim.py  Token.py  __init__.py
tests/: conftest.py  test_bulk_primitives.py  test_char.py  test_combinators.py  test_consumption.py  test_expr.py  test_input_types.py  test_laws.py  test_recursion.py  test_source_pos.py  test_token.py  tests_consumption.py
