[project]
name = "pyparsec"
version = "0.1.0"
description = "A Python parser combinator library inspired by Haskell's Parsec."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "khengari77", email = "khengari77@gmail.com" }
]
keywords = ["parser", "combinators", "parsing"]
urls = { Repository = "https://github.com/khengari77/PyParsec" }

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyparsec"]

# This section is required to allow git dependencies
[tool.hatch.metadata]
allow-direct-references = true

# UV specific configuration for development dependencies
[dependency-groups]
dev = [
    "hypothesis>=6.113.0",
    "pytest>=8.3.5",
    "asv>=0.6.4",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pyparsec"]  # ← Move here

[tool.ruff.format]
quote-style = "double"

